# Generated by Django 5.0 on 2026-02-16 11:36

import django.utils.timezone
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ComparisonReport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url_primary', models.URLField(max_length=500)),
                ('url_competitor', models.URLField(max_length=500)),
                ('target_keyword', models.CharField(blank=True, max_length=200, null=True)),
                ('detected_keyword_primary', models.CharField(blank=True, max_length=200)),
                ('detected_keyword_competitor', models.CharField(blank=True, max_length=200)),
                ('intent_type_primary', models.CharField(blank=True, max_length=50)),
                ('intent_type_competitor', models.CharField(blank=True, max_length=50)),
                ('scores_primary', models.JSONField(default=dict)),
                ('scores_competitor', models.JSONField(default=dict)),
                ('gap_summary', models.TextField(blank=True)),
                ('ranking_explanation', models.TextField(blank=True)),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now)),
                ('analysis_duration', models.FloatField(blank=True, null=True)),
            ],
            options={
                'ordering': ['-created_at'],
                'indexes': [models.Index(fields=['-created_at'], name='comparative_created_eede8e_idx')],
            },
        ),
    ]
