# Generated by Django 4.2.29 on 2026-05-07 19:29

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='ContentAnalysis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('url', models.URLField(db_index=True, max_length=2000, unique=True)),
                ('content_hash', models.CharField(help_text='MD5 hash of content for change detection', max_length=64)),
                ('title', models.CharField(blank=True, max_length=300)),
                ('meta_description', models.TextField(blank=True)),
                ('word_count', models.IntegerField(default=0)),
                ('quality_score', models.FloatField(default=0.0, help_text='Overall content quality 0-100')),
                ('readability_ease', models.FloatField(default=0.0)),
                ('readability_grade', models.FloatField(default=0.0)),
                ('structure_data', models.JSONField(default=dict, help_text='Paragraphs, lists, headings count')),
                ('entities_data', models.JSONField(default=dict, help_text='Organizations, people, locations, technologies')),
                ('tfidf_keywords', models.JSONField(default=list, help_text='Top TF-IDF scored keywords')),
                ('embedding_vector', models.TextField(blank=True, help_text='JSON array of embedding values')),
                ('analyzed_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Content Analysis',
                'verbose_name_plural': 'Content Analyses',
                'ordering': ['-analyzed_at'],
            },
        ),
        migrations.CreateModel(
            name='KeywordOpportunity',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('keyword', models.CharField(db_index=True, max_length=200)),
                ('keyword_type', models.CharField(choices=[('tfidf', 'TF-IDF Extracted'), ('gap', 'Competitor Gap'), ('llm', 'AI Suggested'), ('longtail', 'Long-tail')], default='tfidf', max_length=20)),
                ('relevance_score', models.FloatField(default=0.0, help_text='Relevance to content 0-100')),
                ('search_volume_estimate', models.CharField(blank=True, help_text="e.g., '1K-10K'", max_length=50)),
                ('difficulty_score', models.FloatField(default=0.0, help_text='SEO difficulty 0-100')),
                ('competition_gap_score', models.FloatField(default=0.0, help_text='Gap vs competitors 0-100')),
                ('search_intent', models.CharField(blank=True, choices=[('informational', 'Informational'), ('navigational', 'Navigational'), ('transactional', 'Transactional'), ('commercial', 'Commercial')], max_length=20)),
                ('priority', models.CharField(choices=[('high', 'High'), ('medium', 'Medium'), ('low', 'Low')], default='medium', max_length=10)),
                ('ai_reasoning', models.TextField(blank=True, help_text='Explanation for why this keyword is suggested')),
                ('suggested_action', models.TextField(blank=True, help_text="Action to take (e.g., 'Add H2 section')")),
                ('is_accepted', models.BooleanField(blank=True, help_text='User accepted this suggestion', null=True)),
                ('is_rejected', models.BooleanField(blank=True, help_text='User rejected this suggestion', null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('content_analysis', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='opportunities', to='keyword_ai.contentanalysis')),
            ],
            options={
                'verbose_name': 'Keyword Opportunity',
                'verbose_name_plural': 'Keyword Opportunities',
                'ordering': ['-relevance_score'],
                'unique_together': {('content_analysis', 'keyword')},
            },
        ),
        migrations.CreateModel(
            name='SuggestionFeedback',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('user_action', models.CharField(choices=[('accepted', 'Accepted'), ('rejected', 'Rejected'), ('ignored', 'Ignored'), ('implemented', 'Implemented')], max_length=15)),
                ('user_comment', models.TextField(blank=True)),
                ('rating', models.IntegerField(blank=True, help_text='1-5 star rating', null=True)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('session_id', models.CharField(blank=True, help_text='For tracking user sessions', max_length=100)),
                ('ranking_before', models.IntegerField(blank=True, null=True)),
                ('ranking_after_30_days', models.IntegerField(blank=True, null=True)),
                ('traffic_increase_estimate', models.FloatField(blank=True, null=True)),
                ('opportunity', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='feedback', to='keyword_ai.keywordopportunity')),
            ],
            options={
                'verbose_name': 'Suggestion Feedback',
                'verbose_name_plural': 'Suggestion Feedbacks',
                'ordering': ['-timestamp'],
            },
        ),
        migrations.CreateModel(
            name='GapAnalysis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total_gap_opportunities', models.IntegerField(default=0)),
                ('high_priority_gaps', models.JSONField(default=list)),
                ('all_gap_keywords', models.JSONField(default=list)),
                ('recommendations', models.JSONField(default=list)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('content_analysis', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='gap_analysis', to='keyword_ai.contentanalysis')),
            ],
            options={
                'verbose_name': 'Gap Analysis',
                'verbose_name_plural': 'Gap Analyses',
            },
        ),
        migrations.CreateModel(
            name='CompetitorAnalysis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('competitor_url', models.URLField(max_length=2000)),
                ('competitor_title', models.CharField(blank=True, max_length=300)),
                ('meta_keywords', models.TextField(blank=True)),
                ('headings_data', models.JSONField(default=list)),
                ('top_keywords', models.JSONField(default=list)),
                ('status', models.CharField(default='success', max_length=20)),
                ('error_message', models.TextField(blank=True)),
                ('analyzed_at', models.DateTimeField(auto_now_add=True)),
                ('user_content', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='competitor_analyses', to='keyword_ai.contentanalysis')),
            ],
            options={
                'verbose_name': 'Competitor Analysis',
                'verbose_name_plural': 'Competitor Analyses',
                'unique_together': {('user_content', 'competitor_url')},
            },
        ),
    ]
